# shelley

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  dev-shelleyc  docker-compose.yml  host.mk  mypy.ini  pyproject.toml  requirements.txt  setup.py  shelleymc-sequence-diagram.drawio  viz.py
.run/: shelleypy Controller (models22_paper_aquamote_example_python_v3).run.xml
actions/: __init__.py  checker.py  parser.py
appcompiler/: __init__.py  __main__.py  serializer.py  settings.py
appvizviewer/: __main__.py
ast/: node.py  rules.py  triggers.py
behaviours/: __init__.py  checker.py  parser.py
benchmarking/: run-benchmark
components/: __init__.py  checker.py
demos/: common.mk
demos/aquamote/: README.md  app.py  timer.py  wifi.py
demos/paper_aquamote_example/: app.py  controller.py  http.py  power.py  sectors.py  timer.py  uses.yml  valve.py  wifi.py  wireless.py
demos/paper_running_example_appv1/: app.py  valve.py
demos/paper_running_example_appv2/: app.py  sector.py  uses.yml  valve.py
devices/: __init__.py  checker.py  creator.py
docs/: dev.md
events/: __init__.py  checker.py  parser.py
examples/: Makefile  common.mk  smartbutton1.yaml
examples/7segment/: 7segment.yml  Makefile
examples/aquamote/: ahttp.py  uses.yml
examples/aquamote_controller/: Makefile  README.md  controller_finalstates.yml  controller_radio_v1.yml  controller_radio_v1_lp_strict.yml  controller_radio_v3_lp_strict.yml  controller_radioclient.yml  controller_radioclient_v2.yml  controller_v1.yml  controller_v2.yml  controller_v2_finalstates.yml  controller_v2_valvehandlertimer.yml  controller_valvehandler.yml  controller_valvehandlertimer.yml  uses.yml
examples/aquamote_core/: Makefile  README.md  aquamote_core.yml  aquamote_core_v2.yml  uses.yml  (+2 more)
formalization/: Shelley.v
pekoe-examples/: decorators.py  dispatchers.py  events.py
shelley/: ltlf.py  modelcheck.py  parser.py
shelleyc/: __init__.py  exceptions.py  main.py  serializer.py  settings.py  stats.py
shelleyv/: __main__.py  main.py
test-suite/: Makefile  README.md  convert2lark.py  convert_all.py  create_makefiles.py  examples.mk  exclude.yml  exclude_create_makefiles.yml  update_makefile.py
testing/: test_behaviours.py  test_devices.py  test_predecessor.py  test_successor.py  test_trigger_rules_for_device.py  test_trigger_rules_get_devices.py  test_trigger_rules_list.py  test_trigger_rules_set.py  test_triggers.py  test_valid_reduction_on_triggers.py
tests/: context.py  test_appcompiler.py  test_appcompiler_parser.py  test_argparse_options.py  test_assemble.py  test_assemble_events.py  test_assemble_integration_operations.py  test_assemble_micro.py  test_assemble_ok.py  test_assemble_undefined_micro.py  test_automata.py  test_automata_micro.py  test_bad_integration.py  test_count_calls.py  test_creation.py  test_integration_undeclared_operation_in_subsystem.py  test_internal_behavior.py  test_merge_components.py  test_micro.py  test_nfa_visitor.py  test_parser.py  test_parser_events.py  test_parser_integration.py  test_parser_lark.py  test_pprint_visitor.py  test_serialization.py  test_shelley_to_nfa.py  test_shelleyc.py  test_system_automata.py  test_wfsyntax.py  test_yaml_parser.py
triggers/: __init__.py  checker.py  test_visitor.py
wfsyntax-checker/: app.py  regex.py
(+1254 files in other folders)
