[tool.poetry]
name = "shelley"
version = "0.1.13"
description = "Check system integration"
authors = ["Carlos Mão de Ferro", "Tiago Cogumbreiro", "Francisco Martins"]
license = "MIT"
readme = 'README.rst'

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"
graphviz = "^0.14"
radon = "^4.3.2"
karukuri = {git = "https://gitlab.com/umb-svl/karukuri", rev = "47725611d1135a8a567bf55ab2e5a0aa3ecfcf10"}
lark="^0.11.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pytest = "^5.4.1"
black = "^19.10b0"
Pygments = "^2.6.1"
snakeviz="^2.1.0"
aiohttp = "^3.7.4" # required for blackd
aiohttp_cors = "^0.7.0" # required for blackd
natsort = "^7.1.1"

[tool.poetry.scripts]
ltl = "shelley.shelleymc.ltlf:main"
shelleymc = "shelley.shelleymc.modelcheck:main"
yaml2lark = "shelley.parsers.yaml.yaml2lark:main"
shelleyc = "shelley.shelleyc.main:main"
shelleyv = "shelley.shelleyv.main:main"
shelleys = "shelley.shelleys.main:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
