[tool.poetry]
name = "shelley"
version = "1.2"
description = "A model checker for calls ordering"
authors = ["Carlos Mão de Ferro", "Tiago Cogumbreiro", "Francisco Martins"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyyaml = "^5.3.1"
graphviz = "^0.14"
radon = "^4.3.2"
karukuri = {git = "https://gitlab.com/umb-svl/karakuri.git", rev = "adc33180dd4f073958cc374246d1f75a11af22eb"}
lark = "^0.11.3"
astroid = "^2.8.4" # required for shelleypy

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^6.2.5"
black = "^22.1.0"
Pygments = "^2.6.1"
snakeviz="^2.1.0"
aiohttp = "^3.7.4" # required for blackd
aiohttp_cors = "^0.7.0" # required for blackd
natsort = "^7.1.1"
pandas = "^1.3.2"
numpy = "^1.21.2"

[tool.poetry.scripts]
ltl = "shelley.shelleymc.ltlf:main"
shelleymc = "shelley.shelleymc.modelcheck:main"
yaml2lark = "shelley.parsers.yaml.yaml2lark:main"
shelleyc = "shelley.shelleyc.main:main"
shelleyv = "shelley.shelleyv.main:main"
shelleys = "shelley.shelleys.main:main"
shelley-makefile = "shelley.util.generate_makefile:main"
shelley-makefile-bad = "shelley.util.generate_makefile_bad:main"
shelleypy = "shelley.shelleypy.checker.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
